@@ -7,6 +7,7 @@ Changes
 2) Reduce warnings with pedantic compiler options
 3) Examples fixed
 4) Legend identifiers of with symbol and line fixed
+5) simpleplot example added
 
 Release 6.0.0
 ===================
